# neurofin-ai-platform

./: .gitignore  README.md  package.json  run.py  start.ps1
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/application/use_cases/: generate_forecast.py
backend/app/core/: config.py
backend/app/domain/entities/: forecast.py
backend/app/domain/repositories/: forecast_repository.py
backend/app/domain/services/: forecast_service.py
backend/app/infrastructure/ml/: simple_forecaster.py
backend/app/infrastructure/repositories/: in_memory_forecast_repository.py
backend/app/presentation/: dependencies.py
backend/app/presentation/api/v1/: router.py
backend/app/presentation/api/v1/endpoints/: forecast.py  health.py
backend/app/presentation/api/v1/schemas/: forecast.py
backend/docs/: 00-vision.md  01-architecture.md  02-roadmap.md  03-domain-model.md  04-api-design.md  05-artificial-intelligence-strategy.md  06-azure-integration.md  07-deployment.md
backend/docs/adr/: ADR-001-clean-architecture.md  ADR-002-fastapi.md  ADR-003-github-copilot.md  ADR-004-machine-learning.md  ADR-005-azure-ai.md
backend/docs/diagrams/: imagenes_png.text
backend/tests/: test_forecast.py  test_health.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  env.d.ts  main.tsx
frontend/src/api/: client.ts  forecast.ts  health.ts
frontend/src/components/: AppLogo.tsx  AppNavigation.tsx  HealthStatusCard.tsx  (+2 more)
(+11 files in other folders)
